styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

@font-face {
    font-family: 'Futura';
    src: url('/futura.ttf') format('truetype');
}

:root {
    /* Text Colors */
    --light-text: #F5F5F5;
    --dark-text: #A1A1AA;
    --mid-text: #DDDDDD;
    /* Theme Colors */
    --green-color: #398C6F;
    --background-color: #171717;
    --card-background: #1E1E1E;
    /* Size */
    --small-text: 0.875rem;
    --mini-text: 0.65rem;
}

/* Reset CSS */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

a {
    text-decoration: none;
}

/* Global Styles */

body {
    background-color: var(--background-color);
    font-family: 'Open Sans';
   
}

::-webkit-scrollbar {
    background: #333333;
    width: 0.9rem;
}

::-webkit-scrollbar-thumb {
    background: #555555;
}



img {
    max-width: 100%;
}

h1 {
    font-size: 2.25rem;
    font-weight: 400;
    color: white;
}

h2 {
    font-size: 2rem;
    color: white;
}


h3 {
    font-size: 1.5rem;
    font-weight: 400;
    color: var(--light-text);
}

h4 {
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1.7rem;
}

p {
    font-size: 1rem;
}

/* Reusable Classes */

.container {
    max-width: 45rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

h1.home-title {
    font-size: 2.7rem;
}

p.dark-text {
    color: var(--dark-text);
    line-height: normal;
}

p.mid-text {
    color: var(--mid-text);
}

p.light-text {
    color: var(--light-text);
}

p.highlight-text {
    color: white;
}

p.green-text {
    color: var(--green-color);
    font-size: var(--small-text);
    font-weight: 600;
}


p.mid-mini-text {
    color: var(--mid-text);
    font-size: var(--small-text);
    font-weight: 400;
}

p.date {
    color: var(--dark-text);
    font-size: var(--mini-text);
}


h4.light-title {
    color: var(--light-text);
}

h4.mid-title {
    color: var(--mid-text);
}

h4.dark-title {
    color: var(--mid-text);
}

.flex-col {
    display: flex;
    flex-direction: column;
}

.flex {
    display: flex;
    gap: 0.5rem;
}


.small-line {
    height: 1px;
    width: 8rem;
    background-color: var(--dark-text);
}

.dark-line {
    height: 1px;
    width: 8rem;
    background-color: #333333;
}

p.arrow {
    font-size: 1.2rem;
    color: var(--mid-text);
}


.more-button {
    display: inline-flex;
    gap: 0.5rem;
    align-items: center;
    line-height:1.5rem;
    transition: 0.3s;
    border-radius: 50px;
    padding: 0.3rem 0;

}

.more-button:hover {
    background-color: var(--card-background);
    padding: 0.3rem 0.9rem;
}

.more-button:hover p {
    color: var(--light-text) !important;

}

.page-title {
    border-bottom: 2px solid #e5e5e521;
    padding-bottom: 1rem;
    margin: 3rem 0;
}

.flex-col-end {
    align-self: flex-end;
}

.mdx-body p {
    margin-bottom: 1.5rem;
}

/* Nav and Footer Styles */
main{
    flex: 1;
}

nav {
    display: flex;
    justify-content: flex-end;
    gap: 1rem;
    padding: 1.5rem 0;
    margin-right: 2rem;
}


p.nav-active {
    color: white;
    background-color: var(--card-background) !important;

    
}

p.nav-item {
    padding: 0.3rem 0.8rem;
    line-height: normal;
    border-radius: 0.4rem;
    transition: 0.2s background-color;
    background-color: transparent;
}

p.nav-item:hover {
    background-color: var(--card-background);
}

footer {
    display: flex;
    justify-content: center;
    padding: 1rem;
    margin-top: 2rem;
}

/* Home Styles */

.home-personal {
    margin: 5rem 0;
    gap: 1.5rem;
}

.personal-links {
    display: flex;
    align-items: center;
    gap: 1vw;
    margin: 0 auto;
    padding-top: 3rem;
}

.personal-links-icon {
    display: flex;
    gap: 0.5rem;
}

.blog-post-card {
    gap: 0.5rem;
}

.effect {
    transition: 0.2s;
}

.card-effect:hover  div.dark-line {
    background-color: var(--green-color);
}

.card-effect:hover  h4 {
    color: white;
}

.card-effect:hover  p.dark-text {
    color: var(--mid-text);
}

.card-effect:hover > p.date {
    color: var(--mid-text);
}

.card-effect:hover p.mid-text {
    color: var(--light-text);
}

.home-newest {
    gap: 2.5rem;
    margin-bottom: 3rem;
}

.project-card {
    gap: 1.5rem;
    padding: 1.5rem;
    border-radius: 0.6rem;
    background-color: var(--card-background);
}

.home-project-content {
    gap: 0.5rem;
}

.project-card-content-container {
    width: 50%;
    gap: 1rem;
    justify-content: center;
}

.projects-page-wrapper {
    gap: 2rem;
}

.project-img {
    width: 50%;
    
}

.project-img img{
    width: 100%;
    object-fit: cover;

}

.github-icon:hover path.github-inner {
    fill: #a41cfe;
}

.github-icon:hover path.github-outer{
    fill: #a41cfe42;

}

.linkedin-icon:hover path.linkedin-inner {
    fill: #0173b1;
}

.linkedin-icon:hover path.linkedin-outer{
    fill: #0173b16c; 
}


.twitter-icon:hover path.twitter-inner {
    fill: #1d9bf0;
}

.twitter-icon:hover path.twitter-outer{
    fill: #1d9cf088; 
}



/* Blogpost Styles */

article {
    margin-top: 2rem;
}

article  p {
    color: var(--mid-text);
    line-height: 1.4rem;
}

.blogpost-info {
    border-left: 5px solid var(--green-color);
    padding: 0.7rem 1rem;
    background-color: var(--card-background);
    margin: 1.5rem 0;
    border-radius: 0.3rem;
    display: flex;
    gap: 1rem;
}

p.post-info {
    font-size: 0.9rem;
    color: var(--dark-text);
}


/* Project Styles */

article.project {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

p.tech-tag {
    padding: 0.2rem 1rem;
    border-radius: 50px;
    font-size: 0.9rem;
    color: white;
    background-color: transparent;
    border: 1px solid transparent;
    border-color: var(--dark-text);
}

p.CSS {
    color: #016fb9;
    border-color: #016fb9;
}

p.JavaScript {
    color: #f7de1f;
    border-color: #f7de1f;
}

p.React {
    color: #55cef0;
    border-color: #55cef0;
}

p.HTML {
    color: #e44a24;
    border-color: #e44a24;
    
}

.button {
    background-color: var(--card-background);
    padding: 0.5rem 1.5rem;
    border-radius: 50px;
    display: inline;
}

@media screen and (max-width: 800px){
    .container {
        margin-inline: 5%;
    }

    nav {
        justify-content: center;
        margin: 0;
    }

    .home-personal {
        margin-top: 3rem;
    }

    .small-line {
        width: 5rem;
    }

    p.post-info {
        font-size: calc(0.5rem + 1vw)
    }

}

@media screen and (max-width: 600px) {
    
    .project-mobile {
        display: flex;
        flex-direction: column;
    }

    .project-img {
        width: 100%;
    }

    .project-card-content-container {
        width: 100%;
    }
}

